fixed home page bio block on mobile

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -187,7 +187,7 @@
 	/*=====---- BIO SECTION ----=====*/
 
 	.bioHome {
-		background: map-get($bgColors, medBg);
+		// background: map-get($bgColors, medBg);
 
 		&__wrapper {
 			padding-bottom: 0;
@@ -203,6 +203,7 @@
 
 		&__box {
 			padding-top: 4em;
+			backdrop-filter: none;
 		}
 
 		&__mobileImgWrp {
